[create] presentaion vdo tag

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -122,17 +122,67 @@
     <section class="module bg-dark-60">
       <div class="container">
         <div class="row">
-          <div class="col-sm-12">
+          <div class="col-sm-12 col-md-12">
             <div class="video-box">
               <div class="video-box-icon">
-                <a class="video-pop-up" href="https://www.youtube.com/watch?v=8YiQSvQzwgU">
-                  <span class="icon-video"></span>
+                <a class="video-pop-up" href="https://www.youtube.com/watch?v=pEgZnFgTTpo">
+                  <!-- <span class="icon-video">
+          
+                            </span> -->
+                  <img src="https://i.ytimg.com/vi/pEgZnFgTTpo/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBEJzHfArlq9ALpgIw5z7Rihl70pg"
+                    alt="">
                 </a>
               </div>
-              <div class="video-title font-alt">Presentation</div>
-              <div class="video-subtitle font-alt">Watch the video about our new products</div>
+              <div class="video-title font-alt">charity</div>
+              <div class="video-subtitle font-alt"><span class="icon-video"></span> Watch the video about our</div>
             </div>
           </div>
+
+          <div class="col-sm-12 col-md-4">
+            <div class="video-box">
+              <div class="video-box-icon">
+                <a class="video-pop-up" href="https://www.youtube.com/watch?v=n4bEcNJvff8">
+                  <!-- <span class="icon-video">
+  
+                    </span> -->
+                  <img src="https://i.ytimg.com/vi/n4bEcNJvff8/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBPaQ4fODGyPr5A7TV_mw7ne_OX9A"
+                    alt="">
+                </a>
+              </div>
+              <div class="video-title font-alt">agile coach</div>
+              <div class="video-subtitle font-alt"><span class="icon-video"></span> Watch the video about our</div>
+            </div>
+          </div>
+
+          <div class="col-sm-12 col-md-4">
+            <div class="video-box">
+              <div class="video-box-icon">
+                <a class="video-pop-up" href="https://www.youtube.com/watch?v=xY-PjvZZzlk">
+                  <img src="https://i.ytimg.com/vi/xY-PjvZZzlk/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLBR_TmhMb5kDjnDAeRqoZ5-pkaVug"
+                    alt="">
+                </a>
+              </div>
+              <div class="video-title font-alt">angula 4 coach</div>
+              <div class="video-subtitle font-alt"><span class="icon-video"></span> Watch the video about our</div>
+            </div>
+          </div>
+
+          <div class="col-sm-12 col-md-4">
+            <div class="video-box">
+              <div class="video-box-icon">
+                <a class="video-pop-up" href="https://www.youtube.com/watch?v=kQioPDL8zdk">
+                  <!-- <span class="icon-video">
+      
+                        </span> -->
+                  <img src="https://i.ytimg.com/vi/kQioPDL8zdk/hqdefault.jpg?sqp=-oaymwEZCPYBEIoBSFXyq4qpAwsIARUAAIhCGAFwAQ==&rs=AOn4CLABn4n6W7v2uokhhzbLD3zzCgCWqw"
+                    alt="">
+                </a>
+              </div>
+              <div class="video-title font-alt">Ionic coach</div>
+              <div class="video-subtitle font-alt"><span class="icon-video"></span> Watch the video about our</div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
@@ -204,7 +254,10 @@
                 <span class="icon-puzzle"></span>
               </div>
               <h3 class="features-title font-alt">Integration</h3>
-              <p>We provide customized solutions to integrate well-known Accounting and CRM solutions with internal systems. The clients enjoys the benefit of using familiar systems (e.g. place orders, track stock, manage client information etc.), augmented by using ‘of-the-shelf’ packages to provide specialized functionality (without having to reinvent the wheel).
+              <p>We provide customized solutions to integrate well-known Accounting and CRM solutions with internal systems.
+                The clients enjoys the benefit of using familiar systems (e.g. place orders, track stock, manage client information
+                etc.), augmented by using ‘of-the-shelf’ packages to provide specialized functionality (without having to
+                reinvent the wheel).
               </p>
             </div>
           </div>
@@ -535,7 +588,8 @@
             <div class="post mb-20">
               <div class="post-thumbnail">
                 <a href="#">
-                  <img src="https://amp.businessinsider.com/images/5a68700200d0ef3d018b4ec7-960-720.jpg" alt="Blog-post Thumbnail" width="800px" height="460px" />
+                  <img src="https://amp.businessinsider.com/images/5a68700200d0ef3d018b4ec7-960-720.jpg" alt="Blog-post Thumbnail" width="800px"
+                    height="460px" />
                 </a>
               </div>
               <div class="post-header font-alt">
@@ -543,11 +597,12 @@
                   <a href="#">China is Dominating the App Store</a>
                 </h2>
                 <div class="post-meta">By&nbsp;
-                  <a href="#">James Cook </a>&nbsp;|  Mar. 1, 2018, 11:18 AM
+                  <a href="#">James Cook </a>&nbsp;| Mar. 1, 2018, 11:18 AM
                 </div>
               </div>
               <div class="post-entry">
-                <p>Chinese app developers have seen "remarkable" growth and are dominating Apple's App Store, according to a new analyst note published by Macquarie Research, citing App Annie data.</p>
+                <p>Chinese app developers have seen "remarkable" growth and are dominating Apple's App Store, according to a
+                  new analyst note published by Macquarie Research, citing App Annie data.</p>
               </div>
               <div class="post-more">
                 <a class="more-link" href="http://www.businessinsider.com/china-is-dominating-the-app-store-2018-3" target="_blank">Read more</a>
@@ -558,7 +613,8 @@
             <div class="post mb-20">
               <div class="post-thumbnail">
                 <a href="#">
-                  <img src="https://amp.businessinsider.com/images/5abe3938295fa25a218b456b-640-470.jpg" alt="Blog-post Thumbnail" width="800px" height="460px" />
+                  <img src="https://amp.businessinsider.com/images/5abe3938295fa25a218b456b-640-470.jpg" alt="Blog-post Thumbnail" width="800px"
+                    height="460px" />
                 </a>
               </div>
               <div class="post-header font-alt">
@@ -570,9 +626,8 @@
                 </div>
               </div>
               <div class="post-entry">
-                <p>AR apps are seeing fast adoption on iOS, according to new App Store download data from Sensor Tower.
-
-                  Apps that use Apple's ARKit have been installed more than 13 million times</p>
+                <p>AR apps are seeing fast adoption on iOS, according to new App Store download data from Sensor Tower. Apps
+                  that use Apple's ARKit have been installed more than 13 million times</p>
               </div>
               <div class="post-more">
                 <a class="more-link" href="http://www.businessinsider.com/augmented-reality-success-ios-2018-3" target="_blank">Read more</a>
@@ -583,7 +638,8 @@
             <div class="post mb-20">
               <div class="post-thumbnail">
                 <a href="#">
-                  <img src="https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2018/05/Facebook-Dating-796x417.jpg" alt="Blog-post Thumbnail" width="800px" height="460px" />
+                  <img src="https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2018/05/Facebook-Dating-796x417.jpg" alt="Blog-post Thumbnail"
+                    width="800px" height="460px" />
                 </a>
               </div>
               <div class="post-header font-alt">
@@ -595,7 +651,9 @@
                 </div>
               </div>
               <div class="post-entry">
-                <p>In one of the highlights of today’s F8 conference, Facebook announced it was entering the online dating space with new features. These new features, built into Facebook’s existing app, would use information from your profile to match you with potential paramours based on mutual interests and friends.</p>
+                <p>In one of the highlights of today’s F8 conference, Facebook announced it was entering the online dating space
+                  with new features. These new features, built into Facebook’s existing app, would use information from your
+                  profile to match you with potential paramours based on mutual interests and friends.</p>
               </div>
               <div class="post-more">
                 <a class="more-link" href="https://thenextweb.com/facebook/2018/05/02/facebook-tinder-dating-service/" target="_blank">Read more</a>
@@ -947,7 +1005,7 @@
               <p>The goal to serve the increasing demand of IT problems. Especially in the financial services and telecommunication
                 sectors of business.</p>
               <p>Phone (Thai): +66 89-444-7208 Jigkoh</p>
-              <p>Phone (Eng):  +66 91-010-7055 Jesse</p>
+              <p>Phone (Eng): +66 91-010-7055 Jesse</p>
               <p>Email:
                 <a href="#">jigkoh3@gmail.com</a>
               </p>
